<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BdAdminDataFragment">

    <Button
        android:id="@+id/btnCargarBd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cargar_bd" />

    <Button
        android:id="@+id/btnCopiaSeguridad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/copia_seguridad" />

    <Button
        android:id="@+id/btnExportarBd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/exportar_bd" />

</LinearLayout>
